--- a/_lessons/materializations-incremental.html
+++ b/_lessons/materializations-incremental.html
@@ -335,7 +335,7 @@ select * from page_views
 
 ---
 
-# Tacticts
+# Tactics
 
 - Why do we roll up events into page views and sessions?
 - How do we want to materialize this model?
