Edits per Monday. Add knowledge check

--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -18,6 +18,20 @@ the modern data stack possible
 
 ---
 
+# Pragmatism
+
+.right-column[
+Learning about your data warehouse is a surefire way to
+- raise the ceiling on your skills as an analytics professional
+- save a lot of money
+]
+
+.left-column[
+<img src="/ui/img{{page.id}}/role-of-data-eng.png" style="width: 100%;" class="img-center">
+]
+
+---
+
 # What is a data warehouse?
 
 --
@@ -414,6 +428,8 @@ authentication, permissions, information schema, everything is SQL
 - Flexible and scalable **performance** of a data lake and distributed
 processing technology
 
+It's what partners best with dbt!
+
 ---
 
 # Who is best in class?
@@ -500,7 +516,7 @@ What if you want it _now_?
 
 ---
 
-# What if you have petabytes of data?
+## What if you have petabytes of data?
 
 <img src="/ui/img{{page.id}}/jt-billion-rows.png" class="img-center">
 
@@ -518,7 +534,16 @@ What if you want it _now_?
 
 ---
 
-class: subtitle, middle, center
-## Made it :)
+class: subtitle
+# Knowledge check
+
+You should understand:
+- The foundational differences between transactional and analytical databases
+
+You should be building intuition around:
+- Why certain queries/models build more slowly
+- Which dbt features depend on features of the underlying data warehouse
+- Which data warehouses are best-in-class and why
+- Why someone might opt for a Data Lake technology (e.g. Spark)
 
 {% include options/next_presentation.html %}
