--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -52,7 +52,7 @@ Teaching notes:
 # Modern data stack: consequences
 .dense-text[
 Have you ever:
-- Had two stakeholder have different values for a KPI, and not been sure what was right?
+- Had two stakeholders have different values for a KPI, and not been sure what was right?
 - Rewritten the same snippet of SQL? Or forgotten to write it?
 ```sql
 select * from orders
