Link to new gform from faq

--- a/_content/index.html
+++ b/_content/index.html
@@ -268,10 +268,9 @@ canvas {
                                 <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed
                                     agenda a few weeks before each session. You can see <a href="#agenda">above</a> some topic areas we always cover.</p>
                             <h5>The cost of the event is prohibitive for me, is there any flexibility on the price?</h5>
-                                <p> We want dbt to be as accessible to as many people as possible. If you work for a non-profit,
-                                    the public sector, or are member of a community that is historically underrepresented in
-                                    tech – send us a message at <a href="mailto:learn@getdbt.com">learn@getdbt.com</a>. We would love to talk about what it will
-                                    take to get you to the event.</p>
+                                <p> We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible. 
+                                    To that end, we have [diversity scholarships](https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform)
+                                    available to decrease or waive the cost of participation.
                     </div>
                 </div>
             </div>
