--- a/_content/index.html
+++ b/_content/index.html
@@ -268,8 +268,8 @@ canvas {
                                 <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed
                                     agenda a few weeks before each session. You can see <a href="#agenda">above</a> some topic areas we always cover.</p>
                             <h5>The cost of the event is prohibitive for me, is there any flexibility on the price?</h5>
-                                <p> We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible. 
-                                    To that end, we have [diversity scholarships](https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform)
+                                <p> We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible.
+                                    To that end, we have a <a href="https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform">diversity scholarship</a>
                                     available to decrease or waive the cost of participation.
                     </div>
                 </div>
