--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -10,16 +10,8 @@ class: title, center, middle
 ---
 
 # Refresher:
---
 
-## 102: The Analytics Engineering Viewpoint
-_**Analytics code should have quality assurance**_
-* _Run automated tests on source data and on transformed data to ensure that SQL works as intended_
-* _Ensure source data is up to date_
-
----
-# Refresher
-## 103: dbt Fundamentals
+## dbt Fundamentals
 _**Tests** are assertions you make about your **models**._
 
 _When you execute the `test` **command** dbt iterates through the schema files (`models/**.yml`) to construct `select` queries._
