Reference the viewpoint

--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -11,6 +11,14 @@ class: title, center, middle
 
 # Refresher:
 
+## The [dbt Viewpoint](https://docs.getdbt.com/docs/about/viewpoint/)
+_**Analytics code should have quality assurance**_
+* _Run automated tests on source data and on transformed data to ensure that SQL works as intended_
+* _Ensure source data is up to date_
+
+
+---
+# Refresher:
 ## dbt Fundamentals
 _**Tests** are assertions you make about your **models**._
 
