important -> importance of indentation

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -135,7 +135,7 @@ YAML is a (relatively) human-friendly way to write dictionaries and arrays.
 
 It's often used for configuration files (🙋‍♀️).
 
-We use YAML a lot — it's worth making sure you have a good handle on it (esp. the important of indentation!)
+We use YAML a lot — it's worth making sure you have a good handle on it (esp. the importance of indentation!)
 
 ---
 ## What are models?
