Fix broken external links

--- a/_lessons/techniques-trade.html
+++ b/_lessons/techniques-trade.html
@@ -285,7 +285,7 @@ select ...
 ```
 
 .caption[
-  [Learn more about hooks](www.getdbt.com/docs/hooks)
+  [Learn more about hooks](https://docs.getdbt.com/docs/hooks/)
 ]
 
 ---
@@ -331,8 +331,8 @@ Consider:
 
 # Other use cases for hooks & operations
 * Creating UDFs at the start of a run ([Discourse](https://discourse.getdbt.com/t/using-dbt-to-manage-user-defined-functions/18))
-* Performing warehouse maintenance on Redshift ([package](https://github.com/fishtown-analytics/redshift))
-* Staging external tables ([package](https://github.com/fishtown-analytics/redshift))
+* Performing warehouse maintenance on Redshift ([package](https://hub.getdbt.com/fishtown-analytics/redshift/latest/))
+* Staging external tables ([package](https://hub.getdbt.com/fishtown-analytics/dbt_external_tables/latest/))
 
 
 ---
