--- a/_lessons/dbtonic-jinja.html
+++ b/_lessons/dbtonic-jinja.html
@@ -177,10 +177,10 @@ good.ok.
 * Macros are written in `.sql` files in the `macros` directory
 
 ```sql
--- macros/epoch_to_timestamp.sql
+-- macros/cents_to_usd.sql
 
-{% macro epoch_to_timestamp(column_name, time_unit='seconds') %}
-    dateadd({{ time_unit }}, {{ column_name }}, '1970-01-01')
+{% macro cents_to_usd(column_name, precision=2) %}
+    ({{ column_name }} / 100)::numeric(16, {{ precision }})
 {% endmacro %}
 
 ```
@@ -188,10 +188,10 @@ good.ok.
 * Then you can call them in models. Take care with quoting!
 
 ```sql
--- models/my_model.sql
+-- models/staging/stg_stripe__payments.sql
 
 select
-  {{ epoch_to_timestamp('created_ts') }},
+  {{ epoch_to_timestamp('amount') }} as amount_usd
   ...
 ```
 ---
