added line about adopting new software using docs

--- a/_content/index.html
+++ b/_content/index.html
@@ -263,13 +263,14 @@ canvas {
                                         <li>I'm interested in learning about the latest workflows and tools in analytics.</li>
                                         <li>I am unsure how to debug errors.</li>
                                         <li>I want the official dbt training.</li>
+                                        <li>I'm not someone who regularly adopts new software just by reading documentation.</li>
                                       </ul></p>
                             <h5>Is it possible to see a course syllabus ahead of time?</h5>
                                 <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed
                                     agenda a few weeks before each session. You can see <a href="#agenda">above</a> some topic areas we always cover.</p>
                             <h5>The cost of the event is prohibitive for me, is there any flexibility on the price?</h5>
                                 <p> We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible.
-                                    To that end, we have a <a href="https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform">diversity scholarship</a>
+                                    To that end, we have <a href="https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform">diversity scholarship</a>
                                     available to decrease or waive the cost of participation.
                     </div>
                 </div>
