--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -10,7 +10,7 @@ class: title, center, middle
 
 # Who are you?
 
-- [Intros!](https://docs.google.com/presentation/d/1DkcXK2DUodUy7m7uJSoBgH5CXKrCKuj4r0KJ2qSEk60/)
+- [Intros!](https://docs.google.com/presentation/d/1NBwWFfRKW6M1MrCyP20dsUoeS4Qy9ztEUmXnjUZ28OA/)
 - Where are you calling from? (city + room)
 - What does your day-to-day work look like?
 
@@ -96,23 +96,30 @@ All that and more... after the break!
 class: subtitle
 # This course: distributed!
 
-.left-column[
-### Logistics
 - [Agenda](https://docs.google.com/spreadsheets/d/1DOvh06haGHlkiIrBJ5mDnOyZOf5HvZ0AaCsaJgjw3Rk/)
 - Zoom etiquette
-]
---
-.right-column[
+    - Rename yourself: first name & pronouns
+    - Keep video on, as you are able
+    - Use chat liberally
+    - Feel free to raise your hand / interrupt to ask questions!
+    - ["Whiteboard"](https://docs.google.com/document/d/1S9K57H6_Q77P6q7TKHmeGreiQIDUvizehEzWAXZQQX4/) for parked questions
+
+---
+class: subtitle
+# A final note
+
+.left-column[
 ### Values
 - Be curious
 - Learn from each other
 ]
 --
-
+.right-column[
 ### Goals
 
 - Learning to be dbt superusers, analytics engineers, _and_ generous
 members of an open-source community :)
-- What are some of yours?
+- What are some of yours? (Write in chat!)
+]
 
 {% include options/next_presentation.html %}
