Updates to dbtonic jinja, packages

--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -34,7 +34,7 @@ And from there we can talk a little bit about writing custom tests + using custo
 # packages.yml
 packages:
   - package: fishtown-analytics/dbt_utils
-    version: 0.2.5
+    version: 0.3.0
 
 ```
 Note: you can also install a package from a git URL, or from a local directory.
@@ -152,8 +152,10 @@ dbt is itself [a package](https://github.com/fishtown-analytics/dbt/tree/dev/bar
 Hint: we might need this information later today!
 
 ---
-background-color: white
-<img src="/ui/img{{page.id}}/dbt-global-project.jpeg" style="width: 100%;">
+
+<img src="/ui/img{{page.id}}/dbt-global-project.png" style="width: 100%;">
+
+[_Check it out!_](https://github.com/fishtown-analytics/dbt/tree/dev/marian-anderson/core/dbt/include/global_project)
 
 ---
 # Everything's a project!
