--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -160,7 +160,7 @@ Examples:
 ---
 # Q: Why might a test fail?
 
-1. The SQL in your model doesn’t do what you intended
+1. The SQL in your model doesn’t do what you intended.
 --
 
 2. An assumption about your source data is wrong.
