--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -10,7 +10,7 @@ class: title, center, middle
 
 # Who are you?
 
-- [Intros!](https://docs.google.com/presentation/d/1NBwWFfRKW6M1MrCyP20dsUoeS4Qy9ztEUmXnjUZ28OA/)
+- [Intros!](https://www.fishtownanalytics.com/)
 - Where are you calling from? (city + room)
 - What does your day-to-day work look like?
 
