--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -108,9 +108,9 @@ How?
 --
 
 .right-column-33[
-Possible today with...  
+Possible today with...
 - _dbt?_ Yes, many macros/operations
-- _dbt?_ Yes
+- _dbt Cloud?_ Yes
 - _downside?_ Complex workflows can't be configured as code, visualized
 ]
 
@@ -128,7 +128,7 @@ Possible today with...
 --
 
 .right-column-33[
-Possible today with...  
+Possible today with...
 - _dbt?_ [Can be hacked](https://www.youtube.com/watch?v=m-QlIVss0UA), better answers forthcoming
 - _dbt Cloud?_ No
 ]
@@ -149,7 +149,7 @@ For example...
 --
 
 .right-column-33[
-Possible today with... 
+Possible today with...
 - _dbt?_ Yes, with ever-more-stable APIs
 - _dbt Cloud?_ Not really
 ]
