--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -79,7 +79,7 @@ Descriptions can be added to models, sources, and columns (in your existing `.ym
 version: 2
 
 models:
-  - name: fct_orders
+  - name: orders
     description: One record per order
     columns:
       - name: order_id
