--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -22,7 +22,7 @@ _**Analytics code should have quality assurance**_
 ## dbt Fundamentals
 _**Tests** are assertions you make about your **models**._
 
-_When you execute the `test` **command** dbt iterates through the schema files (`models/**.yml`) to construct `select` queries._
+_When you execute the `test` **command** dbt iterates through the resource files (`models/**.yml`) to construct `select` queries._
 
 _These queries return `0` when your assertion is true, otherwise the test fails._
 ???
